# backend

./: .dockerignore  .gitmodules  DESIGN.md  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
artifacts/backtests/: candidates_2026_07_21.jsonl  candidates_v3_2026_07_22.jsonl  candidates_v4_2026_07_22.jsonl  candidates_v5_2026_07_22.jsonl  catalog_audit_2026_07_21.jsonl  discovered_audit_2026_07_22.jsonl  options_suite_2026_07_22.jsonl
artifacts/eval/: backtests_final.json  backtests_full.json  momentum_dated.json  momentum_e2_expanded.json  momentum_gated.json  swing_dated.json  swing_e2_expanded.json  swing_gated.json
artifacts/models/: lgbm_signal_gate.meta.json
artifacts/rl/: q_table.json
artifacts/signals/: momentum_2026-07-09.json  momentum_2026-07-15.json  momentum_2026-07-17.json  momentum_2026-07-20.json  swing_2026-07-09.json  swing_2026-07-15.json  swing_2026-07-17.json  swing_2026-07-20.json
backend/ai/: feature_engineering.py  model_registry.py  sector_taxonomy.py
backend/api/: admin_routes.py  ai_routes.py  alerts_routes.py  app.py  assistant_routes.py  auth_routes.py  auto_trader_routes.py  autopilot_streams_routes.py  broker_routes.py  dashboard_routes.py  discovery_routes.py  dossier_routes.py  earnings_routes.py  fo_strategies_routes.py  ipo_routes.py  main.py  managed_routes.py  market_routes.py  marketplace_routes.py  notifications_routes.py  onboarding_routes.py  (+23 more)
docs/: BROKER_VERIFICATION.md  DEPLOYMENT.md  FINTECHX-SYSTEM.md  ML_DL_DEEP_AUDIT_2026_06_15.md  ML_MASTERPLAN_2026_06_16.md  ML_TRAINING_READINESS_AND_PIPELINE_2026_06_16.md  PRODUCTION_REORG_PLAN_2026_06_16.md  QUANTX_AI_SYSTEMS_EXPLAINED.md  QUANTX_DEEP_AUDIT_2026_06_18.md  QUANTX_DEEP_AUDIT_2026_06_18.sections.json  QUANTX_FULL_FEATURE_AUDIT.md  SEBI-COMPLIANCE-AUDIT-2026-07-12.md
scripts/: check_frontend_hex_literals.sh  dev.sh  verify_broker.py
supabase/: config.toml
tests/: conftest.py
(+582 files in other folders)
